--- a/Front-End/app/src/main/AndroidManifest.xml
+++ b/Front-End/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ChangePass"
+            android:exported="false" />
+        <activity
             android:name=".ForgotPass"
             android:exported="false" />
         <activity
