--- a/Front-End/app/src/main/AndroidManifest.xml
+++ b/Front-End/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
 
     <application
         android:allowBackup="true"
-        android:enableOnBackInvokedCallback="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/hackapp_logo"
         android:label="@string/app_name"
@@ -21,6 +21,9 @@
         android:theme="@style/Theme.HackApp"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".options"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
