--- a/Front-End/app/src/main/AndroidManifest.xml
+++ b/Front-End/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -22,9 +23,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".OtherUserActivity"
+            android:name=".UserSettings"
             android:parentActivityName=".MainActivity"
             android:exported="false" />
+        <activity
+            android:name=".OtherUserActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".NotificationsActivity"
             android:exported="false"
